// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePlaceholder should render dark mode version correctly 1`] = `
<div
  class="ImagePlaceholder-sc-11u25v2-0 fAnEcu"
/>
`;

exports[`ImagePlaceholder should render landscape images correctly 1`] = `
<div
  class="ImagePlaceholder-sc-11u25v2-0 fNqlUz"
/>
`;

exports[`ImagePlaceholder should render portrait images correctly 1`] = `
<div
  class="ImagePlaceholder-sc-11u25v2-0 goGtge"
/>
`;

exports[`ImagePlaceholder should render square images correctly 1`] = `
<div
  class="ImagePlaceholder-sc-11u25v2-0 iVdduF"
/>
`;
